[package]
name = "banana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.9"

[dependencies]
lalrpop-util = {version="0.19.9", features=["lexer"]}
derive-new = "0.5.9"
salsa = { git = "https://github.com/salsa-rs/salsa.git", package = "salsa-2022" }
ordered-float = "3.0"

[dev-dependencies]
expect-test = "1.4.0"
